--- a/pom.xml
+++ b/pom.xml
@@ -246,7 +246,7 @@
 
     <build>
         <!-- 统一插件管理 -->
-        <pluginManagement>
+<pluginManagement>
             <plugins>
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
@@ -281,8 +281,35 @@
                         </annotationProcessorPaths>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>com.quanxiaoha</groupId>
+                    <artifactId>my-maven-plugin</artifactId>
+                    <version>1.0-SNAPSHOT</version>
+                    <executions>
+                        <execution>
+                            <id>process-file</id>
+                            <phase>compile</phase>
+                            <goals>
+                                <goal>process-file</goal>
+
+                            </goals>
+                            <configuration>
+                                <fileName>C:\Users\26485\Downloads\mavenlog.txt</fileName>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+
+
             </plugins>
         </pluginManagement>
+        <plugins>
+            <!-- 显式引用自定义插件 -->
+            <plugin>
+                <groupId>com.quanxiaoha</groupId>
+                <artifactId>my-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 
     <!-- 使用阿里云的 Maven 仓库源，提升包下载速度 -->
