--- a/weblog-web/pom.xml
+++ b/weblog-web/pom.xml
@@ -18,16 +18,19 @@
         <dependency>
             <groupId>com.quanxiaoha</groupId>
             <artifactId>weblog-module-common</artifactId>
+
         </dependency>
 
         <dependency>
             <groupId>com.quanxiaoha</groupId>
             <artifactId>weblog-module-admin</artifactId>
+
         </dependency>
 
         <dependency>
             <groupId>com.quanxiaoha</groupId>
             <artifactId>weblog-module-search</artifactId>
+
         </dependency>
 
         <!-- Web 依赖 -->
@@ -95,20 +98,43 @@
             <groupId>io.github.toolgood</groupId>
             <artifactId>toolgood-words</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>3.9.9</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- dependency on annotations -->
+        <dependency>
+            <groupId>org.apache.maven.plugin-tools</groupId>
+            <artifactId>maven-plugin-annotations</artifactId>
+            <version>3.8.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
+
+        <pluginManagement>
+            <plugins>
+
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
+                </plugin>
         </plugins>
+        </pluginManagement>
+
     </build>
 
 </project>
