--- a/pom.xml
+++ b/pom.xml
@@ -281,7 +281,7 @@
                         </annotationProcessorPaths>
                     </configuration>
                 </plugin>
-                <plugin>
+<!--                 <plugin>
                     <groupId>com.quanxiaoha</groupId>
                     <artifactId>my-maven-plugin</artifactId>
                     <version>1.0-SNAPSHOT</version>
@@ -298,18 +298,18 @@
                             </configuration>
                         </execution>
                     </executions>
-                </plugin>
+                </plugin> -->
 
 
             </plugins>
         </pluginManagement>
-        <plugins>
+<!--         <plugins>
             <!-- 显式引用自定义插件 -->
             <plugin>
                 <groupId>com.quanxiaoha</groupId>
                 <artifactId>my-maven-plugin</artifactId>
             </plugin>
-        </plugins>
+        </plugins> -->
     </build>
 
     <!-- 使用阿里云的 Maven 仓库源，提升包下载速度 -->
