--- a/pom.xml
+++ b/pom.xml
@@ -281,35 +281,34 @@
                         </annotationProcessorPaths>
                     </configuration>
                 </plugin>
-<!--                 <plugin>
-                    <groupId>com.quanxiaoha</groupId>
-                    <artifactId>my-maven-plugin</artifactId>
-                    <version>1.0-SNAPSHOT</version>
-                    <executions>
-                        <execution>
-                            <id>process-file</id>
-                            <phase>compile</phase>
-                            <goals>
-                                <goal>helpmojo</goal>
-
-                            </goals>
-                            <configuration>
-                                <fileName>C:\Users\26485\Downloads\mavenlog.txt</fileName>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin> -->
-
-
+<!--                <plugin>-->
+<!--                    <groupId>com.quanxiaoha</groupId>-->
+<!--                    <artifactId>my-maven-plugin</artifactId>-->
+<!--                    <version>1.0-SNAPSHOT</version>-->
+<!--                    <executions>-->
+<!--                        <execution>-->
+<!--                            <id>help-mojo</id>-->
+<!--                            <phase>compile</phase>-->
+<!--                            <goals>-->
+<!--                                &lt;!&ndash; good practice is to generate help mojo for plugin &ndash;&gt;-->
+<!--                                <goal>helpmojo</goal>-->
+<!--                            </goals>-->
+<!--                            <configuration>-->
+<!--                                <fileName>C:\Users\26485\Downloads\mavenlog.txt</fileName>-->
+<!--                            </configuration>-->
+<!--                        </execution>-->
+<!--                    </executions>-->
+<!--                </plugin>-->
             </plugins>
         </pluginManagement>
-<!--         <plugins>
-            <!-- 显式引用自定义插件 -->
-            <plugin>
-                <groupId>com.quanxiaoha</groupId>
-                <artifactId>my-maven-plugin</artifactId>
-            </plugin>
-        </plugins> -->
+<!--        <plugins>-->
+<!--            &lt;!&ndash; 显式引用自定义插件 &ndash;&gt;-->
+<!--            <plugin>-->
+<!--                <groupId>com.quanxiaoha</groupId>-->
+<!--                <artifactId>my-maven-plugin</artifactId>-->
+
+<!--            </plugin>-->
+<!--        </plugins>-->
     </build>
 
     <!-- 使用阿里云的 Maven 仓库源，提升包下载速度 -->
