--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
         <lucene.version>8.11.1</lucene.version>
         <commons-io.version>2.11.0</commons-io.version>
         <toolgood-words.version>3.1.0.1</toolgood-words.version>
+        <!-- 测试相关依赖版本 -->
+        <junit-jupiter.version>5.8.2</junit-jupiter.version>
+        <mockito.version>4.5.1</mockito.version>
+        <assertj.version>3.22.0</assertj.version>
+        <!-- 确保测试不被跳过 -->
+        <maven.test.skip>false</maven.test.skip>
+        <skipTests>false</skipTests>
+        <byte-buddy.version>1.12.7</byte-buddy.version>
     </properties>
 
     <!-- 统一依赖管理 -->
@@ -241,6 +249,40 @@
                 <version>${toolgood-words.version}</version>
             </dependency>
 
+            <!-- 测试相关依赖 -->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>${junit-jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${assertj.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <!-- ByteBuddy dependencies for Mockito -->
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>${byte-buddy.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy-agent</artifactId>
+                <version>${byte-buddy.version}</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -265,8 +307,8 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <source>${java.version}</source> <!-- 根据你的 JDK 版本进行调整 -->
-                        <target>${java.version}</target> <!-- 根据你的 JDK 版本进行调整 -->
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>org.projectlombok</groupId>
@@ -298,10 +340,29 @@
                         </execution>
                     </executions>
                 </plugin>
+                <!-- 配置测试插件 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.2</version>
+                    <configuration>
+                        <skipTests>false</skipTests>
+                        <includes>
+                            <include>**/*Test.java</include>
+                            <include>**/*Tests.java</include>
+                        </includes>
+                        <properties>
+                            <configurationParameters>
+                                junit.jupiter.execution.parallel.enabled=true
+                                junit.jupiter.execution.parallel.mode.default=concurrent
+                            </configurationParameters>
+                        </properties>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
-            <!-- 显式引用自定义插件 -->
+
             <plugin>
                 <groupId>com.quanxiaoha</groupId>
                 <artifactId>my-maven-plugin</artifactId>
@@ -321,7 +382,7 @@
         </plugins>
     </build>
 
-    <!-- 使用阿里云的 Maven 仓库源，提升包下载速度 -->
+
     <repositories>
         <repository>
             <id>aliyunmaven</id>
